feat: 添加开机自启功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,13 @@
             app:icon="@drawable/ic_start"
             app:iconPadding="6dp"
             app:iconSize="24dp" />
+
+        <Switch
+            android:id="@+id/start_on_boot_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/start_on_boot" />
     </LinearLayout>
 
     <TextView
